Creado mediante Colaboratory

--- a/Notebooks/Deber1/scrapyData.ipynb
+++ b/Notebooks/Deber1/scrapyData.ipynb
@@ -64,9 +64,9 @@
       "source": [
         "# Load dependencies\n",
         "import json # modulo para trabajar con archivos JSON\n",
-        "import requests # libreria para hacer peticiones HTTP\n",
-        "import pandas as pd # libreria para procesar datos, proporciona funciones para analíticas\n",
-        "from bs4 import BeautifulSoup as bs # Extraer información de paginas web\n"
+        "import requests # librería para hacer peticiones HTTP\n",
+        "import pandas as pd # librería para procesar datos, proporciona funciones para analíticas\n",
+        "from bs4 import BeautifulSoup as bs # Extraer información de páginas web\n"
       ]
     },
     {
@@ -1815,8 +1815,8 @@
       },
       "outputs": [],
       "source": [
-        "# Guardamos las datos extraidos como archivo CSV\n",
-        "# se puede aplcair otras opciones para guardar (Base de datos)\n",
+        "# Guardamos las datos extraídos como archivo CSV\n",
+        "# se puede aplicar otras opciones para guardar (Base de datos)\n",
         "df.to_csv('OlympicGames_Europe_MedalTally.csv')"
       ]
     },
@@ -1833,12 +1833,8 @@
         "* [requests](https://pypi.org/project/requests/)\n",
         "* [pandas](https://pypi.org/project/pandas/)\n",
         "\n",
-        "### Urls de interes\n",
-        "* [Estadisticas Mundial 1](https://www.wikiwand.com/es/Anexo:Tabla_estadística_de_la_Copa_Mundial_de_Fútbol)\n",
-        "* [Estadisticas Mundial 2](https://www.sobrefutbol.com/mundiales/mundial_estadisticas.htm)\n",
-        "* [Estadisticas Mundial 3](https://www.livefutbol.com/clasificacion_historica/wm/)\n",
-        "* [Estadisticas Mundial 4](https://www.soccerstats.com/leagueview.asp?league=worldcup)\n",
-        "* [Estadisticas Mundial 5](https://www.fixturesfootball.com/fifa-world-cup-all-time-stats/)"
+        "### Urls de Interés\n",
+        "* [Medallero de Europa en los Juegos Olímpicos 1](https://www.wikiwand.com/es/Anexo:Medallero_de_Europa_en_los_Juegos_Ol%C3%ADmpicos)\n"
       ]
     }
   ],
