Creado mediante Colaboratory

--- a/Notebooks/Deber1/scrapyData.ipynb
+++ b/Notebooks/Deber1/scrapyData.ipynb
@@ -150,7 +150,7 @@
       },
       "outputs": [],
       "source": [
-        "# Función para exxtrar la data de la URL y procesar el contenido HTML\n",
+        "# Función para extraer la data de la URL y procesar el contenido HTML\n",
         "def processDataHTML(data):\n",
         "  #Seleccionamos la tabla que vamos a usar, data['sections'][0]['text'] --> donde [0] indica la posicion en la que se encuentra la tabla a seleccionar\n",
         "  #todo dependera del formato que se encuentre en \"Inpeccionar elemento --> network --> Fetch --> archivo API\"\n",
