Creado mediante Colaboratory

--- a/Notebooks/Deber1/scrapyData.ipynb
+++ b/Notebooks/Deber1/scrapyData.ipynb
@@ -12,6 +12,23 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "<center><h1><strong>DATA ANALySIS</strong></h1></center>\n",
+        "\n",
+        "\n",
+        "* __authors__ = [@Leonelts13](https://github.com/Leonelts13/DispositivosMoviles/tree/626578a8cfa60096e8d92dbf520c8c644ddda4c7/Notebooks/Deber1)\n",
+        "* __date__ = \"20/12/2023\"\n",
+        "* __version__ = \"1.0.0\"\n",
+        "* __license__ = \"GPL\"\n",
+        "* __title__ = \"Extracción de datos de la Web (Scrapy)\"\n",
+        "* __keywords__ = \"Scrapy, Olympic Games, Medaltally, Data extraction\""
+      ],
+      "metadata": {
+        "id": "E9qXD6OLWe_e"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "5PWr4Gz9YPXp"
       },
