Creado mediante Colaboratory

--- a/Notebooks/Deber1/scrapyData.ipynb
+++ b/Notebooks/Deber1/scrapyData.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<center><h1><strong>DATA ANALySIS</strong></h1></center>\n",
+        "<center><h1><strong>DATA EXTRACTION</strong></h1></center>\n",
         "\n",
         "\n",
         "* __authors__ = [@Leonelts13](https://github.com/Leonelts13/DispositivosMoviles/tree/626578a8cfa60096e8d92dbf520c8c644ddda4c7/Notebooks/Deber1)\n",
